message(STATUS "Projects: Chrono::Vehicle module...")

if(NOT ENABLE_MODULE_VEHICLE)
  return()
endif()  

add_subdirectory(sequential)
add_subdirectory(multicore)
add_subdirectory(go_nogo)
add_subdirectory(go_nogo_SCM)
add_subdirectory(crg)
add_subdirectory(toroidalTire)
add_subdirectory(render_susp)
add_subdirectory(render_crg)
add_subdirectory(marder)
add_subdirectory(mrole)
#add_subdirectory(tire_rig)
