message(STATUS "Projects: Chrono::Vehicle module...")

if(NOT ENABLE_MODULE_VEHICLE)
  return()
endif()  

add_subdirectory(sequential)
add_subdirectory(multicore)
add_subdirectory(go_nogo)
add_subdirectory(go_nogo_SCM)
add_subdirectory(crg)
add_subdirectory(toroidalTire)
add_subdirectory(render_susp)
add_subdirectory(render_crg)
add_subdirectory(marder)
add_subdirectory(mrole)
add_subdirectory(mtv)
add_subdirectory(gclass)
add_subdirectory(track_test)
#add_subdirectory(FEA_terrain)
#add_subdirectory(tire_rig)
add_subdirectory(utils)
add_subdirectory(SPH_terrain)
add_subdirectory(reinitialization)
add_subdirectory(SCM_force_test)
